add getDapps simple endpoint for v3
