# public/swagger.json
@@ -381,7 +381,9 @@
             "type": "string",
             "description": "The network name. Supported networks: astar",
             "enum": [
-              "astar"
+              "astar",
+              "shiden",
+              "shibuya"
             ]
           },
           {
@@ -420,7 +422,9 @@
             "type": "string",
             "description": "The network name. Supported networks: astar",
             "enum": [
-              "astar"
+              "astar",
+              "shiden",
+              "shibuya"
             ]
           },
           {
@@ -533,6 +537,33 @@
               "shiden",
               "shibuya",
               "rocstar"
+            ]
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/v3/{network}/dapps-staking/dappssimple": {
+      "get": {
+        "tags": [
+          "Dapps Staking"
+        ],
+        "description": "Retrieves list of dapps (basic info) registered for dapps staking",
+        "parameters": [
+          {
+            "name": "network",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "The network name. Supported networks: astar, shiden, shibuya",
+            "enum": [
+              "astar",
+              "shiden",
+              "shibuya"
             ]
           }
         ],
